po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-03 15:46+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-06 12:11+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -639,15 +639,15 @@ msgstr "Registracija za događaj %1 je ažurirana."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge Payment for %1 has been Cancelled."
-msgstr ""
+msgstr "Uplata obaveze za %1 je otkazana."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge Payment for %1 has been Failed."
-msgstr ""
+msgstr "Uplata obaveze za %1 nije uspela."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge Payment for %1 has been updated."
-msgstr ""
+msgstr "Uplata obaveze za %1 je ažurirana."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid ""
@@ -657,7 +657,7 @@ msgstr "Morate podesiti podešavanja %1 za vaš procesor uplate pre obavljanja t
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge payment status should be 'Pending' or  'Overdue'."
-msgstr ""
+msgstr "Status uplate obaveze treba da bude 'Na čekanju' ili 'Rok istekao'."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid ""
@@ -670,7 +670,7 @@ msgstr ""
 msgid ""
 "This contact has a pending or overdue pledge payment of %2 which is "
 "scheduled for %3. <a href=\"%1\">Click here to enter a pledge payment</a>."
-msgstr ""
+msgstr "Ovaj kontakt ima uplatu obaveze na čekanju ili sa isteklim rokom od %2 koja je zakazana za %3. <a href=\"%1\">Kliknite ovde da unesete uplatu obaveze</a>."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -976,33 +976,33 @@ msgstr "Barem jedna opcija plaćanja mora biti čekirana."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Please enter a valid number of pledge installments."
-msgstr ""
+msgstr "Unesite važeći broj rata obaveze."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Pledge Installments is required field."
-msgstr ""
+msgstr "Rate obaveze su obavezno polje"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
 "Pledges consist of multiple scheduled payments. Select one-time contribution"
 " if you want to make your gift in a single payment."
-msgstr ""
+msgstr "Obaveze se sastoje od više zakazanih uplata. Možete se odlučiti za donaciju ukoliko želite da donirate samo jednom uplatom."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Pledge Installments field must be > 1."
-msgstr ""
+msgstr "Polje sa ratama obaveza mora biti >1."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Please enter a valid Pledge Frequency Interval."
-msgstr ""
+msgstr "Unesite važeći interval učestalosti obaveze."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Pledge Frequency Interval. is required field."
-msgstr ""
+msgstr "Interval učestalosti obaveze je obavezno polje."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Pledge frequency interval field must be > 0"
-msgstr ""
+msgstr "Interval učestalosti obaveze mora biti > 0"
 
 #: CRM/Contribute/Form/Contribution/OnBehalfOf.php
 msgid ""
@@ -1041,7 +1041,7 @@ msgstr "opcije"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Credit Card Pledge Payment"
-msgstr ""
+msgstr "Uplata obaveze kreditnom karticom"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Credit Card Contribution"
@@ -1131,7 +1131,7 @@ msgstr "Izgleda da imate netačan ili nepotpun link (URL). Proverite da li ste i
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Oops. You cannot make a payment for this pledge - pledge status is %1."
-msgstr ""
+msgstr "Ne možete uplatiti ovu obavezu - status obaveze je %1."
 
 #: CRM/Contribute/Form/ContributionCharts.php
 msgid "Chart Style"
@@ -1151,7 +1151,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/AddProduct.php
 msgid "Selected Premium Product has been removed from this Contribution Page."
-msgstr ""
+msgstr "Izabrani proizvod - nagrada je uklonjen sa ove stranice za doniranje."
 
 #: CRM/Contribute/Form/ContributionPage/AddProduct.php
 msgid "Select the Product"
@@ -1203,7 +1203,7 @@ msgstr "Oznaka za naknadno plaćanje"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Supported pledge frequencies"
-msgstr ""
+msgstr "Podržane učestalosti obaveze"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Allow frequency intervals"
@@ -1278,13 +1278,13 @@ msgstr "Barem jedna opcija učestalosti periodične donacije mora biti čekirana
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "At least one pledge frequency option needs to be checked."
-msgstr ""
+msgstr "Barem jedna opcija učestalosti obaveze mora biti čekirana."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
 "You cannot enable both Recurring Contributions AND Pledges on the same "
 "online contribution page."
-msgstr ""
+msgstr "Ne možete aktivirati periodične donacije i obaveze na istoj stranici za online donacije."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
@@ -2494,7 +2494,7 @@ msgstr ""
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "I pledge to contribute this amount every %1 %2s for %3 installments."
-msgstr ""
+msgstr "Obavezujem se da ću donirati ovaj iznos svakog/svake %1 %2s u %3 rata."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -2506,7 +2506,7 @@ msgid ""
 "Click &quot;%2&quot; below to register your pledge. You will be able to "
 "modify or cancel future pledge payments at any time by logging in to your "
 "account or contacting us at %1."
-msgstr ""
+msgstr "Kliknite na &quot;%2&quot; ispod da registrujete svoju obavezu. Bićete u mogućnosti da modifikujete ili otkažete buduće uplate obaveze kada god želite tako što ćete se ulogovati u vaš nalog ili ukoliko nas kontaktirate na %1."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
@@ -3041,7 +3041,7 @@ msgstr ""
 msgid ""
 "Check this box if you want to give users the option to make a Pledge (a "
 "commitment to contribute a fixed amount on a recurring basis)."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko želite da date korisnicima opciju za obavezu (obavezu da doniraju fiksni iznos periodično)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
