po: update po/sr_RS@latin/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/pledge.po
+++ b/po/sr_RS@latin/pledge.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 05:12+0000\n"
+"PO-Revision-Date: 2017-02-06 11:57+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr ""
 #: CRM/Pledge/BAO/Pledge.php CRM/Pledge/Form/PledgeView.php
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledged"
-msgstr ""
+msgstr "Obaveza"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Balance Amount"
@@ -41,7 +41,7 @@ msgstr "Plaćeno datuma"
 #: CRM/Pledge/BAO/Pledge.php CRM/Pledge/BAO/Query.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Pledge Payment Status"
-msgstr ""
+msgstr "Status uplate obaveze"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2 (overdue)"
@@ -58,7 +58,7 @@ msgstr ""
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "Make Pledge Payment(s):"
-msgstr ""
+msgstr "Izvrši uplatu(uplate) obaveze:"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "I want to make a one-time contribution"
@@ -66,15 +66,15 @@ msgstr ""
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "I pledge to contribute this amount every"
-msgstr ""
+msgstr "Obavezujem se da ću donirati ovaj iznos svakog/svake"
 
 #: CRM/Pledge/BAO/PledgeBlock.php CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Frequency Interval"
-msgstr ""
+msgstr "Interval učestalosti obaveze"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
-msgstr ""
+msgstr "Obaveza je test"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Type - %1"
@@ -90,19 +90,19 @@ msgstr "Kontakt ID %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
-msgstr ""
+msgstr "Obaveza je test?"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter valid Pledge Frequency Interval"
-msgstr ""
+msgstr "Unesite važeći interval učestalosti obaveze"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Frequency"
-msgstr ""
+msgstr "Učestalost obaveze"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Contribution Page"
-msgstr ""
+msgstr "Stranica za doniranje - obaveza"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Original Installment Amount"
@@ -110,31 +110,31 @@ msgstr ""
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Currency"
-msgstr ""
+msgstr "Valuta obaveze"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Frequency Unit"
-msgstr ""
+msgstr "Jedinica učestalosti obaveze"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge day"
-msgstr ""
+msgstr "Dan obaveze"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Number of Installments"
-msgstr ""
+msgstr "Broj rata obaveze"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Acknowledged"
-msgstr ""
+msgstr "Obaveza potvrđena"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Modified Date"
-msgstr ""
+msgstr "Obaveza izmenjena datuma"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Cancelled Date"
-msgstr ""
+msgstr "Obaveza otkazana datuma"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
@@ -151,7 +151,7 @@ msgstr ""
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Status Id"
-msgstr ""
+msgstr "ID statusa obaveze"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Entity Id"
@@ -175,11 +175,11 @@ msgstr "Podsetnici poslati"
 
 #: CRM/Pledge/Form/Payment.php
 msgid "Edit Scheduled Pledge Payment"
-msgstr ""
+msgstr "Uredi zakazanu uplatu obaveze"
 
 #: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
-msgstr ""
+msgstr "Raspored plaćanja obaveze je ažuriran."
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -187,7 +187,7 @@ msgstr ""
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Total Pledge Amount"
-msgstr ""
+msgstr "Ukupan iznos obaveze"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "To be paid in"
@@ -231,7 +231,7 @@ msgstr ""
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Total Pledge Amount should be greater than zero."
-msgstr ""
+msgstr "Ukupan iznos obaveze mora biti veći od nule."
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Installments should be greater than zero."
@@ -248,11 +248,11 @@ msgstr ""
 #: CRM/Pledge/Form/Pledge.php
 msgid ""
 "Pledge has been recorded and the payment schedule has been created.<br />"
-msgstr ""
+msgstr "Obaveza je zabeležena i raspored plaćanja je kreiran.<br />"
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Pledge has been updated.<br />"
-msgstr ""
+msgstr "Obaveza je ažurirana.<br />"
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "An acknowledgment email has been sent to %1.<br />"
@@ -263,13 +263,13 @@ msgid ""
 "If a payment is due now, you can record <a href='%1'>a check, EFT, or cash "
 "payment for this pledge</a> OR <a href='%2'>submit a credit card "
 "payment</a>."
-msgstr ""
+msgstr "Ukoliko je sada poslednji rok za uplatu, možete zabeležiti uplatu <a href='%1'>čekom, elektronskim transferom ili keš uplatu za ovu obavezu</a> ILI <a href='%2'>uplatu kreditnom karticom</a>."
 
 #: CRM/Pledge/Form/Pledge.php
 msgid ""
 "If a payment is due now, you can record <a href='%1'>a check, EFT, or cash "
 "payment for this pledge</a>."
-msgstr ""
+msgstr "Ukoliko je sada poslednji rok za uplatu, možete zabeležiti uplatu <a href='%1'>čekom, elektronskim transferom ili keš uplatu za ovu obavezu</a>"
 
 #: CRM/Pledge/Form/Pledge.php
 #: xml/templates/message_templates/pledge_reminder_html.tpl
@@ -279,7 +279,7 @@ msgstr ""
 
 #: CRM/Pledge/Form/PledgeView.php
 msgid "View Pledge by"
-msgstr ""
+msgstr "Vidi obavezu od"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name or Email"
@@ -291,42 +291,42 @@ msgstr ""
 
 #: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
-msgstr ""
+msgstr "Nađi obaveze"
 
 #: CRM/Pledge/Form/Task/Delete.php CRM/Pledge/Task.php
 msgid "Delete Pledges"
-msgstr ""
+msgstr "Obriši obaveze"
 
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
 msgid_plural "%count pledges deleted."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%count obaveza obrisana."
+msgstr[1] "%count obaveza obrisano."
+msgstr[2] "%count obaveza obrisano."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
-msgstr ""
+msgstr "Štampa liste obaveza"
 
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
-msgstr ""
+msgstr "CiviCRM Pledge Engine"
 
 #: CRM/Pledge/Info.php
 msgid "access CiviPledge"
-msgstr ""
+msgstr "pristup CiviPledge"
 
 #: CRM/Pledge/Info.php
 msgid "View pledges"
-msgstr ""
+msgstr "Vidi obaveze"
 
 #: CRM/Pledge/Info.php
 msgid "edit pledges"
-msgstr ""
+msgstr "uredi obaveze"
 
 #: CRM/Pledge/Info.php
 msgid "Create and update pledges"
-msgstr ""
+msgstr "Kreiraj i ažuriraj obaveze"
 
 #: CRM/Pledge/Info.php
 msgid "delete in CiviPledge"
@@ -334,43 +334,43 @@ msgstr "Obriši u CiviPledge"
 
 #: CRM/Pledge/Info.php
 msgid "Delete pledges"
-msgstr ""
+msgstr "Obriši obaveze"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
-msgstr ""
+msgstr "Vaša obaveza(obaveze)"
 
 #: CRM/Pledge/Page/Tab.php
 msgid ""
 "Pledge has been Cancelled and all scheduled (not completed) payments have "
 "been cancelled.<br />"
-msgstr ""
+msgstr "Obaveza je otkazana i sve zakazane (neizvršene) uplate su otkazane.<br />"
 
 #: CRM/Pledge/Selector/Search.php
 msgid ""
 "Cancelling this pledge will also cancel any scheduled (and not completed) "
 "pledge payments."
-msgstr ""
+msgstr "Otkazivanjem ove obaveze ćete otkazati sve zakazane (neizvršene) uplate obaveze."
 
 #: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
-msgstr ""
+msgstr "Vidi obavezu"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
-msgstr ""
+msgstr "Uredi obavezu"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Cancel Pledge"
-msgstr ""
+msgstr "Otkaži obavezu"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
-msgstr ""
+msgstr "Obriši obavezu"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledged For"
-msgstr ""
+msgstr "Obaveza za"
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Next Pay Date"
@@ -382,11 +382,11 @@ msgstr ""
 
 #: CRM/Pledge/Selector/Search.php
 msgid "Pledge Search"
-msgstr ""
+msgstr "Pretraga obaveza"
 
 #: CRM/Pledge/Task.php
 msgid "Export Pledges"
-msgstr ""
+msgstr "Eksport obaveza"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
 msgid "Adjust scheduled amount"
@@ -398,12 +398,12 @@ msgid ""
 " is no email address recorded for this contact. If you want a acknowledgment"
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
-msgstr ""
+msgstr "Nećete biti u mogućnosti da pošaljete automatsku email potvrdu za ovu uplatu obaveze pošto ne postoji email adresa za ovaj kontakt. Ukoliko želite da pošaljete potvrdu kada se ova uplata obaveze zabeleži, kliknite na Otkaži, zatim Uredi u Kratkom pregledu da biste dodali email adresu pre beleženja uplate."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
 "WARNING: Deleting this pledge will also delete any related pledge payments."
-msgstr ""
+msgstr "Upozorenje: Brisanje ove obaveze će takođe obrisati sve povezane uplate obaveze."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -423,7 +423,7 @@ msgstr ""
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
 " was %1."
-msgstr ""
+msgstr "Ukupan iznos obaveze je promenjen zbog podešavanja uplata. Originalni iznos je bio %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
@@ -440,23 +440,23 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when pledge was made by the contributor."
-msgstr ""
+msgstr "Datum kada se donator obavezao na uplatu."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date of first pledge payment."
-msgstr ""
+msgstr "Datum prve uplate obaveze."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
-msgstr ""
+msgstr "Automatski pošalji email sa potvrdom za ovu obavezu %1?"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
-msgstr ""
+msgstr "Datum kada je potvrda o obavezi poslata."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Sets the default financial type for payments against this pledge."
-msgstr ""
+msgstr "Podešava podrazumevani finansijski tip za uplate ove obaveze."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -475,11 +475,11 @@ msgstr ""
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
 "Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr ""
+msgstr "Kliknite OK da sačuvate zapis o ovoj obavezi i pošaljete potvrdu %1 odmah."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
-msgstr ""
+msgstr "Obaveza od"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -495,7 +495,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Pledge Amounts"
-msgstr ""
+msgstr "Iznosi obaveza"
 
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Payments Start Date"
@@ -519,7 +519,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Click arrow to view pledge payments."
-msgstr ""
+msgstr "Kliknite na strelicu da vidite uplate obaveze."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Show payments"
@@ -531,14 +531,14 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
-msgstr ""
+msgstr "Nađi još obaveza"
 
 #: templates/CRM/Pledge/Form/Task/Delete.tpl
 msgid ""
 "Are you sure you want to delete the selected pledges? This delete operation "
 "cannot be undone and will delete all transactions associated with these "
 "pledges."
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete označene obaveze? Ova operacija je nepovratna i ukloniće sve transakcije povezane sa ovim obavezama."
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "To Be Paid"
@@ -550,11 +550,11 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
-msgstr ""
+msgstr "Broj odabranih obaveza: %1"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Pledge Summary"
-msgstr ""
+msgstr "Kratak pregled obaveze"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "(current month)"
@@ -566,7 +566,7 @@ msgstr "(ova godina)"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Total Pledges"
-msgstr ""
+msgstr "Ukupno obaveza"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Payments Received"
@@ -578,7 +578,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Recent Pledges"
-msgstr ""
+msgstr "Poslednje obaveze"
 
 #: templates/CRM/Pledge/Page/Payment.hlp
 msgid ""
@@ -625,7 +625,7 @@ msgid ""
 "Your site administrator must configure the scheduled job (Administer > "
 "System Settings > Scheduled Jobs) which updates pledge payment statuses and "
 "sends the reminders."
-msgstr ""
+msgstr "Administrator vašeg sajta mora podesiti zakazani posao (Administracija > Sistemska podešavanja > Zakazani poslovi) koji ažurira statuse uplate obaveza i šalje podsetnike."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -641,17 +641,17 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "Pledges received from %1 since inception."
-msgstr ""
+msgstr "Obaveze primljene od %1 "
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
 "Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr ""
+msgstr "Kliknite na <a %1>Dodaj obavezu</a> da snimite novu obavezu primljenu od ovog kontakta."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
-msgstr ""
+msgstr "Nema snimljenih obaveza za ovaj kontakt."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "Contributions made in honor of %1"
@@ -663,11 +663,11 @@ msgstr "Plaćanja"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "There are no Pledges for your record."
-msgstr ""
+msgstr "Nema obaveza za vaš zapis"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Pledges made in your honor."
-msgstr ""
+msgstr "Obaveze u vaše ime."
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Pledger"
@@ -689,21 +689,21 @@ msgstr "dragi/a %1"
 msgid ""
 "thank you for your generous pledge. please print this acknowledgment for "
 "your records."
-msgstr ""
+msgstr "hvala vam na uplati obaveze. molimo vas da odštampate ovu potvrdu za vašu evidenciju."
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Pledge Information"
-msgstr ""
+msgstr "Informacije o obavezi"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Pledge Received"
-msgstr ""
+msgstr "Obaveza primljena"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
@@ -746,18 +746,18 @@ msgstr ""
 
 #: xml/templates/message_templates/pledge_acknowledge_subject.tpl
 msgid "Thank you for your Pledge"
-msgstr ""
+msgstr "Hvala na uplati obaveze"
 
 #: xml/templates/message_templates/pledge_acknowledge_text.tpl
 msgid ""
 "Thank you for your generous pledge. Please print this acknowledgment for "
 "your records."
-msgstr ""
+msgstr "Hvala vam na uplati obaveze. Molimo vas da odštampate ovu potvrdu za vašu evidenciju."
 
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "This is a reminder that the next payment on your pledge is due on %1."
-msgstr ""
+msgstr "Ovo je podsetnik da je sledeća uplata vaše obaveze %1."
 
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 msgid "Go to a web page where you can make your payment online"
@@ -775,7 +775,7 @@ msgstr ""
 
 #: xml/templates/message_templates/pledge_reminder_subject.tpl
 msgid "Pledge Payment Reminder"
-msgstr ""
+msgstr "Podsetnik za plaćanje obaveze"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "First installment payment"
@@ -787,11 +787,11 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement Sent"
-msgstr ""
+msgstr "Potvrda obaveze poslata"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement  Not Sent"
-msgstr ""
+msgstr "Potvrda obaveze nije poslata"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Acknowledgement sent?"
@@ -807,7 +807,7 @@ msgstr "Unesite broj"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Block ID"
-msgstr ""
+msgstr "ID bloka obaveze"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Expose Frequency Interval?"
@@ -819,7 +819,7 @@ msgstr ""
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
-msgstr ""
+msgstr "Eksport obaveza"
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Beginning Date"
