po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 15:28+0000\n"
+"PO-Revision-Date: 2017-02-06 13:58+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -677,7 +677,7 @@ msgstr ""
 msgid ""
 "If 'Location Type' is not selected, you must set the 'Email Selection "
 "Method' to automatic as well."
-msgstr ""
+msgstr "Ukoliko 'Tip lokacije' nije izabran, morate podesiti i 'Metod selekcije emaila' na automatski."
 
 #: CRM/Mailing/Form/Optout.php CRM/Mailing/Form/Unsubscribe.php
 #: CRM/Mailing/Page/Common.php
@@ -1449,11 +1449,11 @@ msgstr "Mailing mora da omogući primaocima da se (a) odjave sa mailing liste il
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Web"
-msgstr ""
+msgstr "Preko veba"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Email"
-msgstr ""
+msgstr "Preko emaila"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
@@ -1553,7 +1553,7 @@ msgstr "Isključenja"
 
 #: ang/crmMailing.js ang/crmMailingAB.js
 msgid "Initializing..."
-msgstr ""
+msgstr "Pokretanje..."
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
@@ -1727,7 +1727,7 @@ msgstr "Test B (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Final (%1)"
-msgstr ""
+msgstr "Konačna verzija (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Select Final Mailing (Test %1)"
@@ -2212,7 +2212,7 @@ msgstr "Uvek je dobro testirati mailing tako što ćete ga poslati sebi i/ili od
 
 #: templates/CRM/Mailing/Form/Test.tpl
 msgid "(filled with your contact's token values)"
-msgstr ""
+msgstr "(popunjeno vrednostima iz tokena vašek kontakta)"
 
 #: templates/CRM/Mailing/Form/Test.tpl
 msgid "Text Version:"
@@ -2547,7 +2547,7 @@ msgstr "Mailing posao"
 
 #: CRM/Mailing/DAO/TrackableURL.php
 msgid "Trackable URL ID"
-msgstr ""
+msgstr "ID ispraćenih URLova"
 
 #: CRM/Mailing/Event/DAO/Bounce.php
 msgid "Bounce ID"
@@ -2557,7 +2557,7 @@ msgstr "ID odbijanja"
 #: CRM/Mailing/Event/DAO/Opened.php CRM/Mailing/Event/DAO/Reply.php
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Event Queue"
-msgstr ""
+msgstr "Redosled događaja"
 
 #: CRM/Mailing/Event/DAO/Delivered.php
 msgid "Delivered ID"
@@ -2565,7 +2565,7 @@ msgstr "ID dostave"
 
 #: CRM/Mailing/Event/DAO/Forward.php
 msgid "Forward ID"
-msgstr ""
+msgstr "ID prosleđivanja"
 
 #: CRM/Mailing/Event/DAO/Forward.php
 msgid "Destination Queue"
