po: update po/sr_RS@latin/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 13:52+0000\n"
+"PO-Revision-Date: 2017-02-06 11:05+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -410,12 +410,12 @@ msgstr "Obnovi članstvo"
 #: CRM/Batch/Form/Entry.php CRM/Contribute/Form/Contribution.php
 #: CRM/Pledge/Form/Payment.php
 msgid "Adjust Pledge Payment Schedule?"
-msgstr ""
+msgstr "Podesi raspored uplata obaveza?"
 
 #: CRM/Batch/Form/Entry.php CRM/Contribute/Form/Contribution.php
 #: CRM/Pledge/Form/Payment.php
 msgid "Adjust Total Pledge Amount?"
-msgstr ""
+msgstr "Podesi ukupan iznos obaveze?"
 
 #: CRM/Batch/Form/Entry.php CRM/Contribute/Form/SoftCredit.php
 msgid "Please enter the soft credit amount."
@@ -1007,7 +1007,7 @@ msgstr "Import mod"
 
 #: CRM/Contribute/Import/Parser/Contribution.php CRM/Pledge/DAO/Pledge.php
 msgid "Pledge ID"
-msgstr ""
+msgstr "ID obaveze"
 
 #: CRM/Contribute/Info.php CRM/Event/Info.php CRM/Member/Info.php
 msgid "credit card"
@@ -1724,7 +1724,7 @@ msgstr "u toku"
 
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
 msgid "Adjust Pledge Payment Schedule"
-msgstr ""
+msgstr "Podesi raspored uplata obaveza"
 
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
 msgid ""
@@ -1740,7 +1740,7 @@ msgstr "Primer: Ukoliko unesete uplatu 60 a zakazani iznos je 50, sledeća uplat
 
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
 msgid "Adjust Total Pledge Amount"
-msgstr ""
+msgstr "Podesi ukupan iznos obaveze"
 
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
 msgid ""
@@ -2158,16 +2158,16 @@ msgstr "Trenutni status"
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Pledge Status"
-msgstr ""
+msgstr "Status obaveze"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 msgid "Total Pledged"
-msgstr ""
+msgstr "Ukupna obaveza"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "Pledge Start Date"
-msgstr ""
+msgstr "Datum početka obaveze"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/Form/Pledge.php
 #: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
@@ -2176,12 +2176,12 @@ msgstr ""
 #: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Pledge Made"
-msgstr ""
+msgstr "Obaveza datuma"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "Pledge End Date"
-msgstr ""
+msgstr "Datum kraja obaveze"
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 #: CRM/Report/Form/Contribute/Recur.php
@@ -2191,7 +2191,7 @@ msgstr "Datum kreiranja"
 #: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
 #: CRM/Report/Form/Pledge/Detail.php CRM/Report/Form/Pledge/Summary.php
 msgid "Pledge Amount"
-msgstr ""
+msgstr "Iznos obaveze"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl CRM/Report/Form/Pledge/Detail.php
 msgid "Balance Due"
