--- a/po/sv_SE/common-components.po
+++ b/po/sv_SE/common-components.po
@@ -5,7 +5,7 @@
 # Translators:
 # Ainali <ainali.jan@gmail.com>, 2011
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
-# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015,2017
 # Leif Andersson <leifand12345@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-15 20:32+0000\n"
-"Last-Translator: Leif Andersson <leifand12345@gmail.com>\n"
+"PO-Revision-Date: 2017-02-07 02:57+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgstr "Typsnittsstil"
 #: CRM/Mailing/Form/Component.php templates/CRM/Mailing/Page/Component.tpl
 #: CRM/Member/Form/MembershipStatus.php
 msgid "Default?"
-msgstr ""
+msgstr "Standard?"
 
 #: CRM/Admin/Form/Navigation.php templates/CRM/Event/Page/DashBoard.tpl
 msgid "Parent"
