--- a/po/sv_SE/financial.po
+++ b/po/sv_SE/financial.po
@@ -5,15 +5,15 @@
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2014
 # Kim Sanfridsson <kim.sanfridsson@ciruxia.se>, 2017
-# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015,2017
 # Mateusz Pozar <mateusz@kkvgbg.se>, 2015
 # Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 23:45+0000\n"
-"Last-Translator: Kim Sanfridsson <kim.sanfridsson@ciruxia.se>\n"
+"PO-Revision-Date: 2017-02-07 02:56+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "Protokoll:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
