--- a/po/sv_SE/mailing.po
+++ b/po/sv_SE/mailing.po
@@ -7,15 +7,15 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2013-2014
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
-# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
+# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015,2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 11:01+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2017-02-07 03:02+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgstr "Fältet \"%1\" är obligatoriskt."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
-msgstr ""
+msgstr "Fältet \"body_html\" eller \"body_text\" krävs."
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/Form/Upload.php
 msgid "This message is missing a required token - {%1}: %2"
@@ -57,7 +57,7 @@ msgstr "Valt utskick har raderats"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "SMS Message"
-msgstr ""
+msgstr "SMS-meddelande"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Use Template"
