--- a/po/sv_SE/contribute.po
+++ b/po/sv_SE/contribute.po
@@ -4,15 +4,16 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2014
+# Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # RikJo <rikard.johansson@dfs.se>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 22:02+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2017-02-07 03:02+0000\n"
+"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -53,7 +54,7 @@ msgstr "Automatiskt genererade"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid "Automatic renewal of %1 membership cancelled."
-msgstr ""
+msgstr "Den automatiska förnyelsen av %1-medlemskapet avbröts."
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 #: CRM/Contribute/Form/CancelSubscription.php
