--- a/po/es_ES/event.po
+++ b/po/es_ES/event.po
@@ -9,7 +9,7 @@
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
 # francescbassas <francesc@babu.cat>, 2015,2017
-# ixiam <info@ixiam.com>, 2013,2016
+# ixiam <info@ixiam.com>, 2013,2016-2017
 # ixiam <info@ixiam.com>, 2011
 # Javier Monterroso <jmonterroso@ndi.org>, 2015
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-20 11:34+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-07 17:18+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2597,7 +2597,7 @@ msgid ""
 "Payment amount is less than the amount owed. Expected participant status is "
 "'Partially paid'. Are you sure you want to set the participant status to %1?"
 " Click OK to continue, Cancel to change your entries."
-msgstr "El pago hecho es menor al pago requerido. El pago del participante esta en status de \"pago parcial\". Está seguro que quiere colocar al participante en status a %1? Haga click en OK para continuar, Cancelar para cambiar."
+msgstr "El pago hecho es menor al pago requerido. El pago del participante esta en status de 'pago parcial'. Está seguro que quiere colocar al participante en status a %1? Haga click en OK para continuar, Cancelar para cambiar."
 
 #: templates/CRM/Event/Form/Participant.tpl
 msgid ""
