po: update po/sr_RS@latin/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/campaign.po
+++ b/po/sr_RS@latin/campaign.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-01 11:27+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-02-07 09:39+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +32,7 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
+msgstr "ID peticije ili/i ID aktivnosti nemaju tip Pozitivan."
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
@@ -338,11 +338,11 @@ msgstr ""
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Release Frequency"
-msgstr ""
+msgstr "Učestalost raspuštanja"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Release Frequency interval should be a positive number."
-msgstr ""
+msgstr "Interval učestalosti oslobađanja mora biti pozitivan broj."
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Maximum reserved at one time"
@@ -451,7 +451,7 @@ msgstr "Rezerviši još ispitanika >>"
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Respondent Interview"
-msgstr ""
+msgstr "Intervju ispitanika"
 
 #: CRM/Campaign/Form/Task/Print.php CRM/Campaign/Task.php
 msgid "Print Respondents"
@@ -467,22 +467,22 @@ msgstr ""
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Could not find respondents to release."
-msgstr ""
+msgstr "Ispitanici za raspuštanje nisu pronađeni."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "We could not found respondent for this survey to release."
-msgstr ""
+msgstr "Ispitanici ove ankete za raspuštanje nisu pronađeni."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
 msgid_plural "%count respondents have been released."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "Ispitanik je raspušten."
+msgstr[1] "%count ispitanika je raspušteno."
+msgstr[2] "%count ispitanika je raspušteno."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Released"
-msgstr ""
+msgstr "Raspušten/a"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
@@ -578,7 +578,7 @@ msgstr ""
 
 #: CRM/Campaign/Info.php
 msgid "release campaign contacts"
-msgstr ""
+msgstr "raspusti kontakte kampanje"
 
 #: CRM/Campaign/Info.php
 msgid "Release reserved campaign contacts for surveys and petitions"
@@ -590,11 +590,11 @@ msgstr "Invervjuiši kontakte kampanje"
 
 #: CRM/Campaign/Info.php
 msgid "Record survey and petition responses from their reserved contacts"
-msgstr ""
+msgstr "Zabeleži anketu i traži odgovore od njihovih rezervisanih kontakata"
 
 #: CRM/Campaign/Info.php
 msgid "GOTV campaign contacts"
-msgstr ""
+msgstr "Kontakti GOTV kampanje"
 
 #: CRM/Campaign/Info.php
 msgid "Record that contacts voted"
@@ -747,7 +747,7 @@ msgstr "Rezervisano"
 #: templates/CRM/Campaign/Form/Gotv.tpl
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Released."
-msgstr ""
+msgstr "Raspušten/a."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
@@ -797,7 +797,7 @@ msgstr "Ovaj naslov će se prikazivati na vrhu stranice sa zahvalnicom."
 msgid ""
 "Enter text (and optional HTML layout tags) for the thank-you message that "
 "will appear at the top of the thank-you page."
-msgstr ""
+msgstr "Upišite text (i opcione HTML tagove) za poruku zahvalnice koja će se pojaviti na vrhu stranice sa zahvalnicom."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Disable the email confirmation for unverified contacts?"
@@ -981,11 +981,11 @@ msgstr "snimi odgovore"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Release"
-msgstr ""
+msgstr "Raspusti"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "release"
-msgstr ""
+msgstr "raspusti"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Response Saved."
@@ -1005,7 +1005,7 @@ msgstr "rezerviši"
 
 #: templates/CRM/Campaign/Form/Task/Release.tpl
 msgid "Do you want to release respondents for '%1' ?"
-msgstr ""
+msgstr "Da li želite da raspustite ispitanike za '%1' ?"
 
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
 msgid "Add Respondent Reservation(s)"
