po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-01-31 15:27+0000\n"
+"PO-Revision-Date: 2017-02-07 09:52+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgstr ""
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Add Association Rule"
-msgstr ""
+msgstr "Dodaj pravilo asocijacije"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
@@ -64,22 +64,22 @@ msgstr "obriši"
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Use the 'Add Association Rule' form to add new rules."
-msgstr ""
+msgstr "Koristite 'Dodaj pravilo asocijacije' formular da dodate nova pravila."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Association Rule"
-msgstr ""
+msgstr "Pravilo asocijacije"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Add association rule"
-msgstr ""
+msgstr "Dodaj pravilo asocijacije"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Edit association rule"
-msgstr ""
+msgstr "Uredi pravilo asocijacije"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
@@ -89,12 +89,12 @@ msgstr ""
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Your association rule has been edited."
-msgstr ""
+msgstr "Vaše pravilo asocijacije je uređeno."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Your association rule has been added."
-msgstr ""
+msgstr "Vaše pravilo asocijacije je dodato."
 
 #: drupal/modules/views/civicrm.views.inc
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
@@ -475,7 +475,7 @@ msgstr ""
 msgid ""
 "find contacts by name, email address, group membership and or tagging at <a "
 "href=\"!1\">Find Contacts</a>."
-msgstr ""
+msgstr "Nađite kontakte po imenu, emailu, članstvu u grupi ili tagovima koristeći <a href=\"!1\">Nađi kontakte</a>. "
 
 #: drupal/civicrm.module
 msgid ""
