po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -29,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-04 14:50+0000\n"
+"PO-Revision-Date: 2017-02-08 00:00+0000\n"
 "Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -1639,7 +1639,7 @@ msgstr "Supprimer l'activité"
 #: CRM/Activity/Selector/Activity.php
 #: templates/CRM/Activity/Form/ActivityView.tpl
 msgid "Mailing Report"
-msgstr "Rapport de mailing"
+msgstr "Rapport de l'envoi"
 
 #: CRM/Activity/Selector/Activity.php
 #: templates/CRM/Activity/Form/ActivityView.tpl
@@ -21808,7 +21808,7 @@ msgstr "Compte rendu des rebonds"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Bounce Report for mailings"
-msgstr "Fournit un rapport des rebonds de courriels suite à mailing"
+msgstr "Fournit un rapport des rebonds de courriels suite à un envoi massif"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail Summary Report"
