--- a/po/it_IT/extension.po
+++ b/po/it_IT/extension.po
@@ -3,16 +3,16 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016-2017
 # ZeroInfinity <gianni.codevico@zeroinfinity.it>, 2013
 # LinoLinux <reni.marco@gmail.com>, 2014
 # Salvatore Emanuele Schimmenti <salvatore.schimmenti@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-04 01:11+0000\n"
-"Last-Translator: Salvatore Emanuele Schimmenti <salvatore.schimmenti@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-02-07 22:46+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -75,7 +75,7 @@ msgstr ""
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Errore di analisi nell'estensione: %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -119,7 +119,7 @@ msgstr "Impossibile estrarre l'estensione: struttura cartelle non valida"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
-msgstr ""
+msgstr "Impossibile estrarre l'estensione: %1 non può essere eliminato"
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
@@ -127,7 +127,7 @@ msgstr "Errore di installazione"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
-msgstr ""
+msgstr "Impossibile estrarre l'estensione su %1."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension."
@@ -135,7 +135,7 @@ msgstr "Impossibile estrarre l'estensione"
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
-msgstr ""
+msgstr "Lettura dati da %1 fallita durante l'installazione"
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Failed to load file (%3) for payment processor (%1) while running \"%2\""
